# tsak-web

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tree.txt
backend/: db 2.sqlite3  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
backend/announcements/: admin.py  models.py  serializers.py  urls.py  views.py
backend/django_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/events/: admin.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_alter_event_options_event_order_event_ordering_type_and_more.py
backend/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
backend/members/: admin.py  models.py  serializers.py  urls.py  views.py
backend/members/migrations/: 0001_initial.py
backend/scholarships/: admin.py  models.py  serializers.py  urls.py  views.py
backend/scholarships/migrations/: 0001_initial.py
backend/sponsors/: admin.py  models.py  serializers.py  urls.py  views.py
backend/sponsors/migrations/: 0001_initial.py  0002_sponsor_description_en_sponsor_name_en_and_more.py
backend/tsak_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/app/: globals.css  layout.tsx  navbar.css  not-found.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/components/: AboutDropDown.tsx  CommunityDropDown.tsx  Footer.tsx  InformationDropDown.tsx  LanguageSwitcher.tsx  MobileMenu.tsx  MobileMenuWrapper.tsx
src/components/: ScollToTop.tsx
src/messages/: en.json  th.json
(+61 files in other folders)
